@@ -3,6 +3,7 @@
 
 Bug fixes
  - [web] fixed JavaScript exception when SOGo is launched from an external link (#3900)
+ - [web] restored fetching of freebusy information of MS Exchange contacts
 
 3.2.3 (2016-11-25)
 ------------------
